--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "ethers": "^6.11.1",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "web3": "^4.6.0"
   },
   "devDependencies": {
     "@types/node": "^20",
