--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
+    "@worldcoin/idkit": "^1.1.4",
     "ethers": "^6.11.1",
     "next": "14.1.3",
     "react": "^18",
